Ubrzavanje loptice nakon nekog vremena - potrebna dorada

--- a/BreakoutGame/BreakoutGame/BreakoutGame.csproj
+++ b/BreakoutGame/BreakoutGame/BreakoutGame.csproj
@@ -160,5 +160,8 @@
   <ItemGroup>
     <None Include="Resources\broken.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\highScore.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
